--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "tailwindcss": "^3.0.18"
     },
     "dependencies": {
-        "admin-lte": "^3.0"
+        "admin-lte": "^3.0",
+        "jspdf": "^2.5.1"
     }
 }
