--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
     "/js/app1.js": "/js/app1.js",
-    "/css/app1.css": "/css/app1.css",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/css/app1.css": "/css/app1.css"
 }
